--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공감요정 🤖</title>
+  <title>공감요정 🤖 - 감정 공감 로봇</title>
+  <meta name="description" content="마음에 공감해주는 귀여운 로봇 공감요정! 감정을 선택하고 위로를 받아보세요.">
+  <meta name="keywords" content="공감요정, 감정 로봇, 감정 공감, 위로 로봇, 감성 캐릭터, 감정 이모지, 공감 캐릭터, 힐링 사이트, 위로받는 로봇, empathy robot">
   <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap" rel="stylesheet">
   <style>
     body {
@@ -112,9 +114,7 @@
   <div class="divider"></div>
 
   <div class="section-title">지금 너의 감정을 선택해줘!</div>
-  <div class="emojis" id="emojiContainer">
-    <!-- 감정 버튼들은 스크립트에서 생성할게 -->
-  </div>
+  <div class="emojis" id="emojiContainer"></div>
 
   <div class="section-title">너의 이야기를 써줘!</div>
   <textarea id="storyInput" placeholder="네 마음을 편하게 적어줘..."></textarea><br>
